test/memory/shannon/freedWithoutMalloc.good
freedWithoutMalloc.chpl:5: error: Attempting to free memory that wasn't allocated
